--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "Solicitudes App",
-    "slug": "Solicitudes App",
+    "slug": "app-cargos",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icono_app.png",
